added comments for teacher handler also
